[gd_scene load_steps=2 format=3 uid="uid://cr0ybwbhdqoum"]

[ext_resource type="Script" uid="uid://2tltnwu3qwd2" path="res://Scenes/settings_menu.gd" id="1_icv2g"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icv2g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 252.0
offset_bottom = 203.0

[node name="AA_options" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "OFF"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA_2X"
popup/item_2/id = 2
popup/item_3/text = "MSAA_4X"
popup/item_3/id = 3

[node name="T_detail_options" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "LOW"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="D_D_options" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Near"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Far"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="Fps" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "30"
popup/item_0/id = 0
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "unlimited"
popup/item_3/id = 3

[node name="Resolution" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/id = 0
popup/item_1/id = 1
popup/item_2/id = 2

[node name="Model_detailing" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "LOw"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 899.0
offset_top = 71.0
offset_right = 1054.0
offset_bottom = 120.0
text = "Back to main menu
"

[connection signal="item_selected" from="VBoxContainer/AA_options" to="." method="_on_aa_options_item_selected"]
[connection signal="item_selected" from="VBoxContainer/T_detail_options" to="." method="_on_t_detail_options_item_selected"]
[connection signal="item_selected" from="VBoxContainer/D_D_options" to="." method="_on_d_d_options_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Fps" to="." method="_on_fps_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Model_detailing" to="." method="_on_model_detailing_item_selected"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
